Anonymous | Login | 2019-02-24 04:49 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0025777 | Community | [OCCT] OCCT:DRAW | public | 2015-02-01 15:29 | 2016-04-20 15:48 | ||||
Reporter | shoogen | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Linux | OS | Debian 6.0 | OS Version | 64 bit | ||||
Product Version | [OCCT] 6.8.0 | ||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0025777: Draw Harness, ViewerTest - make commands defining standard views to match their names | ||||||||
Description | The standards views are defined inconsistent between the old an the new visualization. The bottom view in the old visualisation is just a rotated back view.Num right up (normal) old new Comment 1 +X +Z (-Y) front vright 2 +X +Y (+Z) top vtop (correct) 3 +Y +Z (+X) right vfront 4 -X +Z (+Y) back vleft (4*) +X -Z (+Y) bottom (+180°) (useless) 5 +X -Y (-Z) --- vbottom (correct in the new vdisplay) 6 -Y +Z (-X) left vback 0 axonom (+X-Y+Z) axo vaxo (correct) The Num(ber) is just for my reference. | ||||||||
Steps To Reproduce | Test case bugs/vis/bug25777 | ||||||||
Additional information and documentation updates | It seems that in ViewerTest_ViewerCommands.cxx the right axis was used when the normal should have been given. for example: vfront needs to be changed form V3d_Xpos to V3d_Yneg | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs vis bug25777 | ||||||||
Attached Files | ![]() ![]() ![]() ![]() | ||||||||
![]() |
|
(0045011) git (administrator) 2015-09-03 15:43 |
Branch CR25777 has been created by isk. SHA-1: 101489760bdce401ff70e77ae97187a5451de462 Detailed log of new commits: Author: isk Date: Thu Sep 3 15:43:21 2015 +0300 0025777: the standard views are defined incorrectly and mismatch the old display. Old vright equals new vfront, old vfront equals new vright, old vleft equals new vback, old vback equals new vleft. |
(0045014) isk (developer) 2015-09-03 16:18 |
Dear Kirill, Please review the branch CR25777. |
(0045016) kgv (developer) 2015-09-03 16:27 |
Please prepare test case and attach screenshots to this bug demonstrating properly oriented camera views. |
(0045039) git (administrator) 2015-09-04 10:57 |
Branch CR25777 has been updated by isk. SHA-1: 04f03bba919ad74a2c6abe93d78ae1a00dcd280a Detailed log of new commits: Author: isk Date: Fri Sep 4 10:57:20 2015 +0300 Add test case demonstrating properly oriented camera views. |
(0045066) kgv (developer) 2015-09-04 14:22 |
Please create model with human-readable labels within test case and add symmetric test using axo (old viewer). |
(0045125) git (administrator) 2015-09-07 11:21 |
Branch CR25777 has been updated by isk. SHA-1: 49f3ae40fab5e04244393a48bc57ac13b202c8f1 Detailed log of new commits: Author: isk Date: Mon Sep 7 11:20:37 2015 +0300 Create model with human-readable labels within test case and add symmetric test using axo (old viewer). |
(0045134) git (administrator) 2015-09-07 13:09 |
Branch CR25777_1 has been created by isk. SHA-1: 7e9024317431e232ac0d87597f4cad9458d43d58 Detailed log of new commits: Author: isk Date: Mon Sep 7 11:24:31 2015 +0300 0025777: the standard views are defined incorrectly and mismatch the old display. Old vright equals new vfront, old vfront equals new vright, old vleft equals new vback, old vback equals new vleft. |
(0045135) git (administrator) 2015-09-07 13:26 |
Branch CR25777_1 has been updated forcibly by isk. SHA-1: f478aab5481269af394c3d731a462052bcbe845c |
(0045136) isk (developer) 2015-09-07 13:26 |
Dear Kirill, Please review the branch CR25777_1. |
(0045138) kgv (developer) 2015-09-07 14:27 |
Dear Ilya, please extend description of the commands left, vleft, right, vright and others to specify XYZ orientation like it is shown in title of old axo viewer (e.g. "-X+Z" for "back", "+Y+Z" for "right" and others) since the names themselves are too ambiguous. |
(0045153) git (administrator) 2015-09-07 16:18 |
Branch CR25777_1 has been updated forcibly by isk. SHA-1: b074dab9c9824a7163b5746499f66994a03588c5 |
(0045249) kgv (developer) 2015-09-08 16:35 |
Please test the patch. |
(0045269) git (administrator) 2015-09-08 19:31 |
Branch CR25777_1 has been updated forcibly by mkv. SHA-1: e753947faf62d090d2f90eb02f6fca93dae931ac |
(0045326) mkv (tester) 2015-09-09 14:50 |
Dear BugMaster, Branch CR25777_1 was rebased on current master of occt git-repository. SHA-1: e753947faf62d090d2f90eb02f6fca93dae931ac |
(0045328) mkv (tester) 2015-09-09 14:51 |
Dear BugMaster, Branch CR25777_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: e753947faf62d090d2f90eb02f6fca93dae931ac Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR25777-1-master-occt-64/Debian70-64/bugs/vis/bug25777.html [^] http://occt-tests/CR25777-1-master-occt-64/Windows-64-VC10/bugs/vis/bug25777.html [^] bugs vis bug25777: OK Testing on Linux: occt component : Total MEMORY difference: 91292357 / 91937745 [-0.70%] Total CPU difference: 17818.44999999909 / 17713.55999999897 [+0.59%] products component : Total MEMORY difference: 25262797 / 25210384 [+0.21%] Total CPU difference: 7372.129999999977 / 6935.280000000003 [+6.30%] Testing on Windows: occt component : Total MEMORY difference: 57154275 / 57144704 [+0.02%] Total CPU difference: 16549.02288279888 / 16584.591110799327 [-0.21%] products component : Total MEMORY difference: 16226694 / 16225943 [+0.00%] Total CPU difference: 5314.907269699963 / 5398.88260799997 [-1.56%] There are no differences in images found by testdiff. |
(0045388) kgv (developer) 2015-09-10 11:45 edited on: 2015-09-10 11:46 |
1456 // Left 1457 aView->SetProj(V3d_Xneg); hot-keys were not updated within the patch. |
(0046876) git (administrator) 2015-10-16 16:14 |
Branch CR25777 has been deleted by kgv. SHA-1: 49f3ae40fab5e04244393a48bc57ac13b202c8f1 |
(0046877) git (administrator) 2015-10-16 16:14 |
Branch CR25777_1 has been deleted by kgv. SHA-1: e753947faf62d090d2f90eb02f6fca93dae931ac |
![]() |
|||
occt: master 27af3052
Timestamp: 2015-09-07 13:17:29 Author: isk Committer: bugmaster [ Details ] [ Diff ] |
0025777: the standard views are defined incorrectly and mismatch the old display. Old vright equals new vfront, old vfront equals new vright, old vleft equals new vback, old vback equals new vleft. |
||
mod - samples/tcl/pathtrace.tcl | [ Diff ] [ File ] | ||
mod - src/DrawResources/StandardViews.tcl | [ Diff ] [ File ] | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | [ Diff ] [ File ] | ||
mod - tests/3rdparty/fonts/B4 | [ Diff ] [ File ] | ||
mod - tests/3rdparty/fonts/B5 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_5/bug24842_back | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_5/bug24842_front | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_5/bug24842_left | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_5/bug24842_right | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_5/bug25841 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug23253 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug24351_1 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug24351_2 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug24351_3 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug24351_4 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug24714 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug25103 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug25178 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug25230 | [ Diff ] [ File ] | ||
add - tests/bugs/vis/bug25777 | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug26028 | [ Diff ] [ File ] | ||
mod - tests/v3d/raytrace/refraction | [ Diff ] [ File ] | ||
mod - tests/v3d/raytrace/textures | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-02-01 15:29 | shoogen | New Issue | |
2015-02-01 15:29 | shoogen | Assigned To | => mkv |
2015-02-01 16:31 | shoogen | File Added: 0025777.gitbundle | |
2015-02-01 16:32 | shoogen | File Added: 0001-0025777-correct-standard-views.patch | |
2015-02-05 18:13 | mkv | Assigned To | mkv => kgv |
2015-02-05 18:13 | mkv | Status | new => assigned |
2015-08-24 15:54 | kgv | Assigned To | kgv => isk |
2015-08-24 15:54 | kgv | Target Version | => 7.0.0 |
2015-09-03 15:43 | git | Note Added: 0045011 | |
2015-09-03 16:18 | isk | Note Added: 0045014 | |
2015-09-03 16:18 | isk | Assigned To | isk => kgv |
2015-09-03 16:18 | isk | Status | assigned => resolved |
2015-09-03 16:18 | isk | Steps to Reproduce Updated | View Revisions |
2015-09-03 16:27 | kgv | Note Added: 0045016 | |
2015-09-03 16:27 | kgv | Assigned To | kgv => isk |
2015-09-03 16:27 | kgv | Status | resolved => assigned |
2015-09-03 16:30 | kgv | Summary | the standard views are defined incorrectly and mismatch the old display => Draw Harness, ViewerTest - make commands defining standard views to match their names |
2015-09-03 16:30 | kgv | Steps to Reproduce Updated | View Revisions |
2015-09-04 10:57 | git | Note Added: 0045039 | |
2015-09-04 10:58 | isk | File Added: bug25777_0_axo.png | |
2015-09-04 10:58 | isk | File Added: bug25777_1_top.png | |
2015-09-04 10:59 | isk | File Added: bug25777_2_bottom.png | |
2015-09-04 10:59 | isk | File Added: bug25777_3_right.png | |
2015-09-04 10:59 | isk | File Added: bug25777_4_left.png | |
2015-09-04 10:59 | isk | File Added: bug25777_5_front.png | |
2015-09-04 10:59 | isk | File Added: bug25777_6_back.png | |
2015-09-04 12:10 | isk | Assigned To | isk => kgv |
2015-09-04 12:10 | isk | Status | assigned => resolved |
2015-09-04 12:10 | isk | Steps to Reproduce Updated | View Revisions |
2015-09-04 14:22 | kgv | Note Added: 0045066 | |
2015-09-04 14:22 | kgv | Assigned To | kgv => isk |
2015-09-04 14:22 | kgv | Status | resolved => assigned |
2015-09-04 15:51 | isk | File Deleted: bug25777_0_axo.png | |
2015-09-04 15:51 | isk | File Deleted: bug25777_1_top.png | |
2015-09-04 15:51 | isk | File Deleted: bug25777_2_bottom.png | |
2015-09-04 15:51 | isk | File Deleted: bug25777_3_right.png | |
2015-09-04 15:51 | isk | File Deleted: bug25777_4_left.png | |
2015-09-04 15:51 | isk | File Deleted: bug25777_5_front.png | |
2015-09-04 15:51 | isk | File Deleted: bug25777_6_back.png | |
2015-09-07 11:21 | git | Note Added: 0045125 | |
2015-09-07 13:09 | git | Note Added: 0045134 | |
2015-09-07 13:26 | git | Note Added: 0045135 | |
2015-09-07 13:26 | isk | Note Added: 0045136 | |
2015-09-07 13:26 | isk | Assigned To | isk => kgv |
2015-09-07 13:26 | isk | Status | assigned => resolved |
2015-09-07 14:27 | kgv | Note Added: 0045138 | |
2015-09-07 14:27 | kgv | Assigned To | kgv => isk |
2015-09-07 14:27 | kgv | Status | resolved => assigned |
2015-09-07 14:32 | kgv | Relationship added | related to 0026653 |
2015-09-07 14:43 | kgv | File Added: cambox.brep | |
2015-09-07 14:44 | kgv | File Added: cambox.ply | |
2015-09-07 16:18 | git | Note Added: 0045153 | |
2015-09-08 16:25 | isk | Assigned To | isk => kgv |
2015-09-08 16:25 | isk | Status | assigned => resolved |
2015-09-08 16:35 | kgv | Note Added: 0045249 | |
2015-09-08 16:35 | kgv | Assigned To | kgv => bugmaster |
2015-09-08 16:35 | kgv | Status | resolved => reviewed |
2015-09-08 17:11 | mkv | Assigned To | bugmaster => mkv |
2015-09-08 19:31 | git | Note Added: 0045269 | |
2015-09-09 14:50 | mkv | Note Added: 0045326 | |
2015-09-09 14:51 | mkv | Note Added: 0045328 | |
2015-09-09 14:51 | mkv | Assigned To | mkv => bugmaster |
2015-09-09 14:51 | mkv | Status | reviewed => tested |
2015-09-09 14:51 | mkv | Test case number | => bugs vis bug25777 |
2015-09-10 11:45 | kgv | Note Added: 0045388 | |
2015-09-10 11:46 | kgv | Note Edited: 0045388 | View Revisions |
2015-09-11 14:09 | bugmaster | Changeset attached | => occt master 27af3052 |
2015-09-11 14:09 | bugmaster | Status | tested => verified |
2015-09-11 14:09 | bugmaster | Resolution | open => fixed |
2015-10-16 16:14 | git | Note Added: 0046876 | |
2015-10-16 16:14 | git | Note Added: 0046877 | |
2016-04-20 15:44 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:48 | aiv | Status | verified => closed |
Copyright © 2000 - 2019 MantisBT Team |