0025777: the standard views are defined incorrectly and mismatch the old display. Old vright equals new vfront, old vfront equals new vright, old vleft equals new vback, old vback equals new vleft.